--- a/client/src/app/admin/admin-category/admin-category.component.html
+++ b/client/src/app/admin/admin-category/admin-category.component.html
@@ -1,10 +1,10 @@
 <div class="categories">
-<hr>
+    <hr style="visibility: hidden;">
 <div class="enterCategory">
 <input (keyup.enter)="AddCategory()" [(ngModel)]="newCategoryName" type="text" placeholder="Add New Category">
 <button (click)="AddCategory()" type="button"  class="btn btn-success ml-3">Add</button>
 </div>
-<hr>
+<hr style="visibility: hidden;">
 <div class="categoryList">
     <h3 >Categories</h3>
 
