--- a/client/src/app/admin/admin-role/admin-role.component.html
+++ b/client/src/app/admin/admin-role/admin-role.component.html
@@ -1,4 +1,4 @@
-<hr>
+<hr style="visibility: hidden;">
 <input placeholder="Enter Username" type="text" [ngModel]="mymodel" (ngModelChange)="valuechange($event)" />
 <div class="row">
     <table class="table">
