--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -43,7 +43,8 @@
     <div *ngIf="user?.username!=post?.userName" routerLink="/detail/{{post.userName}}" class="username">{{post.userName}}</div>
     <div *ngIf="user?.username==post?.userName" routerLink="/member/edit" class="username">{{post.userName}}</div>
           <div class="TitleContent">
-              <div class="PostTitle">{{post.title}}</div>
+              <div *ngIf="post.content.length >=20" class="PostTitle">{{mediumLongcontent(post.title)}}</div>
+              <div *ngIf="post.content.length <20" class="PostContent">{{post.title}}</div>
               <div *ngIf="post.content.length <100" class="PostContent">{{post.content}}</div>
               <div *ngIf="post.content.length >=100" class="PostContent">{{longContent(post.content)}}</div>
               
@@ -53,7 +54,7 @@
             {{post?.created | timeago}}
         </div>
   </div>
-  <hr>
+  <hr style="visibility: hidden;">
   <div class="d-flex justify-content-center" *ngIf="pagination && posts.length >=1 ">
     <pagination 
         [boundaryLinks]="true" 
