--- a/client/src/app/admin/admin-single-post/admin-single-post.component.html
+++ b/client/src/app/admin/admin-single-post/admin-single-post.component.html
@@ -57,7 +57,7 @@
               
         </div>
     </form>
-    <hr>
+    <hr style="visibility: hidden;">
     <div *ngIf="addPostCheck" class="alert alert-danger" role="alert">
         Please Fill in all required fields to add a comment
       </div>
