--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -45,6 +45,7 @@
     </div>
     <div class="col-8">
         <tabset class="member-tabset" #memberTabs>
+            <hr style="visibility: hidden;">
             <tab heading='About {{member?.knownAs}}' (selectTab)="onTabActivated($event)">
                 <h4>Description</h4>
                 <hr style="visibility: hidden;">
