--- a/client/src/app/members/member-pending-post/member-pending-post.component.html
+++ b/client/src/app/members/member-pending-post/member-pending-post.component.html
@@ -2,8 +2,8 @@
     <img src="{{post?.photoUrl || './assets/user.png'}}" class="rounded-circle userPhoto">
           <div  class="username">{{post.userName}}</div>
           <div class="TitleContent">
-            <div *ngIf="post.content.length >=40" class="PostTitle">{{mediumLongcontent(post.title)}}</div>
-            <div *ngIf="post.content.length <40" class="PostTitle">{{post.title}}</div>
+            <div *ngIf="post.title.length >=40" class="PostTitle">{{mediumLongcontent(post.title)}}</div>
+            <div *ngIf="post.title.length <40" class="PostTitle">{{post.title}}</div>
               <div *ngIf="post.content.length <100" class="PostContent">{{post.content}}</div>
               <div *ngIf="post.content.length >=100" class="PostContent">{{longContent(post.content)}}</div>
               
