--- a/client/src/app/comment/comment.component.html
+++ b/client/src/app/comment/comment.component.html
@@ -84,34 +84,12 @@
     
 
 <h2 style="margin-top: 50px;">Answers</h2>
-<div  class="topics"  *ngFor="let comment of comments">
-    <img src="{{comment?.photoUrl || './assets/user.png'}}" class="rounded-circle userPhoto">
-        <div *ngIf="user?.username!=comment?.userName" routerLink="/detail/{{comment.userName}}" class="username">{{comment.userName}}</div>
-        <div *ngIf="user?.username==comment?.userName" routerLink="/member/edit" class="username">{{comment.userName}}</div>
-        <div class="TitleContent">
-            <div class="PostTitle">{{comment.answer}}</div>
-        </div>
+<ng-container *ngFor="let comment of comments">
+    <app-single-comment (deleteComment)="RefReshPage($event)"  [post]="post" [user]="user" [comment]="comment"></app-single-comment>
 
-        <div class="like-date">
-        <div class="date">
-            {{comment?.created | timeago}}
-        </div>
-        <div class="like"> <i class="likeIcon"  (click)="AddCommentLike(comment)" *ngIf="(accountService.currentUser$ | async) !== null" [classList]="GetCommentIsLike(comment?.id)"  class="  fa-6" ></i>
-      
-        </div>
-        <div class="date">
-            <p (click)="openRolesModal(user)" class="likeP" *ngIf="comment.likeCount !==0"  >{{comment.likeCount}} kişi beğendi</p> 
-            <p class="likeP" *ngIf="comment.likeCount ===0"  style="margin-bottom: 40px;"></p> 
-        </div>
-        
-        </div>
+</ng-container>
 
-        <i *ngIf="IsUserCommentContain(comment.id)" (click)="DeleteComment(comment.id)" class=" fa fa-times fa-lg " aria-hidden="true"></i>
-        <i style="visibility: hidden;" *ngIf="!IsUserCommentContain(comment.id)"  class=" fa fa-times fa-lg " aria-hidden="true"></i>
-        
-        
 
-</div>
 <hr style="visibility: hidden;">
 <div class="d-flex justify-content-center" *ngIf="pagination && comments.length >=1 ">
   <pagination 
