--- a/client/src/app/main-page/main-page.component.css
+++ b/client/src/app/main-page/main-page.component.css
@@ -2,7 +2,7 @@
     display: flex;
     border: 2px solid rgb(180, 173, 173);
     cursor: pointer;
-
+    margin-top: 10px;
 }
 .username{
     margin: 10px;
@@ -49,4 +49,7 @@
 }
 .date{
     padding-right: 10px;
+}
+.postsearch{
+    width: 250px;
 }
