--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -10,7 +10,8 @@
 </div>
 
 <div class="row" *ngIf="messages?.length === 0">
-    <h3>No Messages</h3>
+    <h3 *ngIf="container==='Unread'">you have no unread messages</h3>
+    <h3 *ngIf="container==='Inbox'">you have no any message in your inbox</h3>
 </div>
 
 <div class="row" *ngIf="messages?.length > 0">
@@ -41,7 +42,7 @@
     </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination && !loading">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading && messages.length >=1">
     <pagination 
         [boundaryLinks]="true" 
         [totalItems]="pagination.totalItems"
