--- a/client/src/app/comment/comment.component.html
+++ b/client/src/app/comment/comment.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="isLoaded">
 <div *ngIf="!post?.postVisibility && user?.username===post?.userName">
 
     <h3>Your post has not been approved yet</h3>
@@ -122,4 +123,5 @@
   </form>
 
 
+</ng-container>
 </ng-container>
