--- a/client/src/app/single-comment/single-comment.component.html
+++ b/client/src/app/single-comment/single-comment.component.html
@@ -13,6 +13,9 @@
 <div class="like"> <i class="likeIcon"  (click)="AddCommentLike(comment)" *ngIf="(accountService.currentUser$ | async) !== null" [classList]="GetCommentIsLike(comment?.id)"  class="  fa-6" ></i>
 
 </div>
+<div style="visibility: hidden;" class="like"> <i class="likeIcon"  (click)="AddCommentLike(comment)" *ngIf="(accountService.currentUser$ | async) === null" [classList]="GetCommentIsLike(comment?.id)"  class="  fa-6" ></i>
+
+</div>
 <div class="date">
     <p (click)="openRolesModal(user)" class="likeP" *ngIf="likeUsers?.length>0"  >{{likeUsers?.length}} kişi beğendi</p> 
     <p class="likeP" *ngIf="likeUsers?.length===0"  style="margin-bottom: 40px;"></p> 
