message wrong date read fixed

--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -53,6 +53,7 @@
                                     <span class="text-warning" *ngIf="message.dateRead 
                                         && message.senderUsername !== username">
                                         (read {{message.dateRead | timeago}})
+                                        {{message.dateRead}}
                                     </span>
                                     
                                 </small>
