--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -14,7 +14,7 @@
                
                 <div>
                     <strong>Name:</strong>
-                    <p>{{member.knownAs}}</p>
+                    <p>{{member?.knownAs}}</p>
                 </div>
                 <div>
                     <strong >Location:</strong>
