--- a/client/src/app/main-page/main-page.component.css
+++ b/client/src/app/main-page/main-page.component.css
@@ -1,6 +1,7 @@
 .topics{
     display: flex;
-    border: 2px solid rgb(180, 173, 173);
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    border-radius: 10px;
     cursor: pointer;
     margin-top: 10px;
 }
