--- a/client/src/app/members/member-post/member-post.component.css
+++ b/client/src/app/members/member-post/member-post.component.css
@@ -1,6 +1,8 @@
 .topics{
+    margin-top: 10px;
     display: flex;
-    border: 2px solid rgb(180, 173, 173);
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    border-radius: 10px;
     cursor: pointer;
 }
 .username{
