--- a/client/src/app/single-comment/single-comment.component.css
+++ b/client/src/app/single-comment/single-comment.component.css
@@ -1,6 +1,8 @@
 .topics{
     display: flex;
-    border: 2px solid rgb(180, 173, 173);
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    margin-top: 10px;
+    border-radius: 10px;
 }
 .username{
     margin: 10px;
@@ -55,6 +57,8 @@
 }
 .likeP{
  cursor: pointer;
+ padding: 5px;
+ border-radius: 5px;
 
 }
 .likePm{
@@ -64,11 +68,6 @@
  border-radius: 5px;
 }
 .date{
-    width: 130px;
-    margin-right: 10px;
-    opacity: 0.8;
-}
-.outLike{
     width: 130px;
     margin-right: 10px;
 }
